samples/_failures_safe/1761316643_4339be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a01e3e32.c: In function ‘process_event’:
./samples/SAFE/__tmp_a01e3e32.c:183:5: error: expected declaration or statement at end of input
  183 |     sm->current_state = new_state;
      |     ^~
